--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site
-name: "Mediumish"
-title: "Mediumish"
-description: "Jekyll template, Medium styled, free for bloggers."
+name: "Concept cars"
+title: "Concept cars"
+description: "Website about concept cars and their mass production cars"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl:
 google_analytics:
 disqus: 'demowebsite'
-mailchimp-list: 'https://wowthemes.us11.list-manage.com/subscribe/post?u=8aeb20a530e124561927d3bd8&amp;id=8c3d2d214b'
+mailchimp-list:
 include: ["_pages"]
 permalink: /:title/
 
