--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: "3"
+version: '3'
 
 services:
-    jekyll:
-        image: jekyll/jekyll:4
-        command: jekyll serve --force_polling
-        ports:
-            - 4000:4000
-        volumes:
-            - .:/srv/jekyll
+  jekyll:
+    image: jekyll/minimal:4
+    volumes:
+      - .:/srv/jekyll
+    ports:
+      - '4000:4000'
+    command: ['jekyll', 'serve', '-s', 'src', '-d', '_site', '--drafts', '--watch', '-H', '0.0.0.0', '-P', '4000']
