Added gravatar Minor cfg updates

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -17,7 +17,7 @@ authors:
     name: Domas
     display_name: Domas
     avatar:
-    gravatar:
+    gravatar: fbf5601bd9a73bc4bead0e79b3e11419
     email: domas.lescinskas@gmail.com
     web: https://domasles.github.io
     description: Domas L.
