--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,10 @@ jobs:
         uses: actions/checkout@v3
       - name: Setup Pages
         uses: actions/configure-pages@v3
+      - run: mkdir src/.jekyll-cache
+      - run: chmod 0777 src/.jekyll-cache
+      - run: mkdir _site
+      - run: chmod 0777 _site
       - name: Build using Jekyll Docker container
         uses: docker://jekyll/minimal:4
         with:
