--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       - .:/srv/jekyll
     ports:
       - '4000:4000'
-    command: ['jekyll', 'serve', '-s', 'src', '-d', '_site', '--drafts', '--watch', '-H', '0.0.0.0', '-P', '4000']
+    command: ['jekyll', 'serve', '-s', 'src', '-d', '_site', '--drafts', '--watch', '-H', '0.0.0.0', '-P', '4000', '--force-polling']
