Cleaned up posts Updated author config

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -19,7 +19,7 @@ authors:
     avatar:
     gravatar: fbf5601bd9a73bc4bead0e79b3e11419
     email: domas.lescinskas@gmail.com
-    web: https://domasles.github.io
+    web: https://github.com/domasles
     description: Domas L.
 
 # Plugins
